examples/test/testpolicy12327.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12327
  namespace: namespace262
spec:
  podSelector:
    matchLabels:
      key13: value12
      key34: value7
      key5: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value11
          key22: value36
      podSelector:
        matchLabels:
          key46: value13
          key14: value46
